hot fix : members cell alignment
removed large left and right margins

--- a/sass/partials/_members_page.scss
+++ b/sass/partials/_members_page.scss
@@ -1,7 +1,6 @@
 #members-page {
     #members-list {
         .card {
-          margin: $margin-lg;
           padding: $margin-sm;
         }
         .avatar {
